# Synthpathy

./: .gitignore  CMakeLists.txt  README.md
doc/: specifications.md
doc/electronics/kicad-libraries/: MCU_RaspberryPi_and_Boards_info.txt
doc/electronics/synthpathy/: sym-lib-table  synthpathy-cache.lib  synthpathy.sch
include/: ActiveNote.h  Biquad.h  CircularBuffer.hpp  Controls.h  NoteManager.h  audio_pwm.h  frequencies.h  fxpt.h  global.h  midi.h  multiqore.h  tests.h  waveforms.h
python_scripts/: audio_plotter.py
src/: ActiveNote.cpp  Biquad.cpp  Controls.cpp  NoteManager.cpp  audio_pwm.cpp  global.cpp  main.cpp  multiqore.c  tests.cpp  waveforms.cpp
